--- a/Project part 1.ipynb
+++ b/Project part 1.ipynb
@@ -9,7 +9,14 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from numpy import mean\n",
+    "from numpy import std\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -1168,7 +1175,7 @@
    ],
    "source": [
     "correlations = df_train.corr()['TARGET'].sort_values()\n",
-    "print('Most Positive Correlations: \\n', correlations.tail(10))\n",
+    "print('Most Positive Correlations: \\n', correlations.tail(8))\n",
     "print('\\nMost Negative Correlations: \\n', correlations.head(5))"
    ]
   },
@@ -1451,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "accessory-stationery",
+   "id": "occupied-rebel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "whole-houston",
+   "id": "neural-output",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1470,36 +1477,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "id": "several-poison",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'y_test' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-40-5ae977ecb4ad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m# using metrics module for accuracy calculation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ACCURACY OF THE MODEL: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'y_test' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.9998"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from numpy import mean\n",
-    "from numpy import std\n",
     "\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# creating a RF classifier\n",
     "clf = RandomForestClassifier(n_estimators = 100) \n",
@@ -1509,28 +1503,122 @@
     "clf.fit(X_train[:30000], Y_train[:30000])\n",
     " \n",
     "# performing predictions on the test dataset\n",
-    "y_pred = clf.predict(X_test)\n",
+    "y_pred_train = clf.predict(X_train[:30000])\n",
     " \n",
     "# metrics are used to find accuracy or error\n",
     "from sklearn import metrics \n",
-    "print()\n",
-    "y\n",
+    "\n",
     "# using metrics module for accuracy calculation\n",
-    "print(\"ACCURACY OF THE MODEL: \", metrics.accuracy_score(y_test, y_pred))"
+    "accuracy_score(Y_train[:30000], y_pred_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "alive-thirty",
+   "metadata": {},
+   "source": [
+    "Gradient Boosting model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "crazy-check",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "civic-celtic",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9244"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a RF classifier\n",
+    "clf2 = GradientBoostingClassifier(n_estimators = 1000) \n",
+    " \n",
+    "# Training the model on the training dataset\n",
+    "# fit function is used to train the model using the training sets as parameters\n",
+    "clf2.fit(X_train[:30000], Y_train[:30000])\n",
+    " \n",
+    "# performing predictions on the test dataset\n",
+    "y_pred_train2 = clf2.predict(X_train[:30000])\n",
+    " \n",
+    "#using metrics module for accuracy calculation\n",
+    "accuracy_score(Y_train[:30000], y_pred_train2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "accurate-provincial",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "continuous-breath",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21:20:41] WARNING: ..\\src\\learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    }
+   ],
+   "source": [
+    "xg_clf = XGBClassifier()\n",
+    "xg_clf.fit(X_train[:30000],Y_train[:30000])\n",
+    "\n",
+    "preds = xg_clf.predict(X_train[:30000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "capable-tennis",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9220666666666667"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(Y_train[:30000], preds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "iraqi-religious",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "legal-dress",
+   "id": "stretch-angle",
    "metadata": {},
    "outputs": [],
    "source": []
