--- a/Project part 1.ipynb
+++ b/Project part 1.ipynb
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "occupied-rebel",
+   "id": "amateur-karaoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,27 +1467,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "neural-output",
+   "execution_count": 73,
+   "id": "sublime-rescue",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train=X_train.dropna()"
+    "X_train=X_train.dropna()\n",
+    "X_train = X_train[:300000]\n",
+    "Y_train = Y_train[:300000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "several-poison",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9998"
+       "0.9995966666666667"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,21 +1502,21 @@
     " \n",
     "# Training the model on the training dataset\n",
     "# fit function is used to train the model using the training sets as parameters\n",
-    "clf.fit(X_train[:30000], Y_train[:30000])\n",
+    "clf.fit(X_train, Y_train)\n",
     " \n",
     "# performing predictions on the test dataset\n",
-    "y_pred_train = clf.predict(X_train[:30000])\n",
+    "y_pred_train = clf.predict(X_train)\n",
     " \n",
     "# metrics are used to find accuracy or error\n",
     "from sklearn import metrics \n",
     "\n",
     "# using metrics module for accuracy calculation\n",
-    "accuracy_score(Y_train[:30000], y_pred_train)"
+    "accuracy_score(Y_train, y_pred_train)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "alive-thirty",
+   "id": "combined-entity",
    "metadata": {},
    "source": [
     "Gradient Boosting model "
@@ -1522,8 +1524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "crazy-check",
+   "execution_count": 75,
+   "id": "handy-sword",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,40 +1534,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "civic-celtic",
+   "execution_count": 80,
+   "id": "hearing-creativity",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Iter       Train Loss   Remaining Time \n",
+      "         1           0.5613            4.65m\n",
+      "         2           0.5613            4.52m\n",
+      "         3           0.5613            4.56m\n",
+      "         4           0.5612            4.68m\n",
+      "         5           0.5612            4.68m\n",
+      "         6           0.5612            4.64m\n",
+      "         7           0.5611            4.63m\n",
+      "         8           0.5611            4.62m\n",
+      "         9           0.5611            4.62m\n",
+      "        10           0.5611            4.63m\n",
+      "        20           0.5608            4.56m\n",
+      "        30           0.5606            4.49m\n",
+      "        40           0.5604            4.44m\n",
+      "        50           0.5602            4.40m\n",
+      "        60           0.5601            4.40m\n",
+      "        70           0.5599            4.36m\n",
+      "        80           0.5597            4.35m\n",
+      "        90           0.5596            4.28m\n",
+      "       100           0.5594            4.21m\n",
+      "       200           0.5578            3.61m\n",
+      "       300           0.5563            3.13m\n",
+      "       400           0.5549            2.73m\n",
+      "       500           0.5536            2.30m\n",
+      "       600           0.5522            1.85m\n",
+      "       700           0.5508            1.40m\n",
+      "       800           0.5496           56.05s\n",
+      "       900           0.5485           28.10s\n",
+      "      1000           0.5473            0.00s\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.9244"
+       "0.91947"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# creating a RF classifier\n",
-    "clf2 = GradientBoostingClassifier(n_estimators = 1000) \n",
+    "clf2 = GradientBoostingClassifier(n_estimators = 1000,verbose=1) \n",
     " \n",
     "# Training the model on the training dataset\n",
     "# fit function is used to train the model using the training sets as parameters\n",
-    "clf2.fit(X_train[:30000], Y_train[:30000])\n",
+    "clf2.fit(X_train, Y_train)\n",
     " \n",
     "# performing predictions on the test dataset\n",
-    "y_pred_train2 = clf2.predict(X_train[:30000])\n",
+    "y_pred_train2 = clf2.predict(X_train)\n",
     " \n",
     "#using metrics module for accuracy calculation\n",
-    "accuracy_score(Y_train[:30000], y_pred_train2)"
+    "accuracy_score(Y_train, y_pred_train2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "accurate-provincial",
+   "execution_count": 77,
+   "id": "planned-furniture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,50 +1612,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "continuous-breath",
+   "execution_count": 78,
+   "id": "intensive-depression",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\viann\\anaconda3\\envs\\BCF\\lib\\site-packages\\xgboost\\sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21:20:41] WARNING: ..\\src\\learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[21:29:22] WARNING: ..\\src\\learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
      ]
     }
    ],
    "source": [
     "xg_clf = XGBClassifier()\n",
-    "xg_clf.fit(X_train[:30000],Y_train[:30000])\n",
+    "xg_clf.fit(X_train,Y_train)\n",
     "\n",
-    "preds = xg_clf.predict(X_train[:30000])"
+    "preds = xg_clf.predict(X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "capable-tennis",
+   "execution_count": 79,
+   "id": "compatible-scout",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9220666666666667"
+       "0.9192466666666667"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(Y_train[:30000], preds)"
+    "accuracy_score(Y_train, preds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stretch-angle",
+   "id": "cathedral-office",
    "metadata": {},
    "outputs": [],
    "source": []
