--- a/Project part 1.ipynb
+++ b/Project part 1.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3280a744",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ce886a2b",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1a76ec1a",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +107,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673a28fe",
    "metadata": {},
    "source": [
     "we choose the values with the most correlation, and we delete the others"
@@ -118,8 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a1998e40",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,8 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "59618224",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,8 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5b827485",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fc4fd92b",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "00ae1b95",
+   "execution_count": 9,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -394,15 +385,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advance-champion",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "reverse-motivation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -410,9 +392,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BCF",
+   "display_name": "yeah",
    "language": "python",
-   "name": "bcf"
+   "name": "yeah"
   },
   "language_info": {
    "codemirror_mode": {
@@ -424,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
