Separating the workflow

--- a/Project part 1.ipynb
+++ b/Project part 1.ipynb
@@ -174,16 +174,17 @@
    "outputs": [],
    "source": [
     "def GB_model(X_train_train,X_train_test,y_train_train,y_train_test):\n",
+    "    \n",
     "    # creating http://localhost:8888/notebooks/Application_of_bigdata_pj/Project%20part%201.ipynb#a RF classifier\n",
-    "    clf2 = GradientBoostingClassifier(n_estimators = 1000) \n",
-    "     \n",
+    "    clf2 = GradientBoostingClassifier(n_estimators = 100) \n",
+    "    \n",
     "    # Training the model on the training dataset\n",
     "    # fit function is used to train the model using the training sets as parameters\n",
     "    clf2.fit(X_train_train, y_train_train)\n",
-    "     \n",
+    "    print(2)\n",
     "    # performing predictions on the test dataset\n",
     "    y_pred_train = clf2.predict(X_train_test)\n",
-    "     \n",
+    "    print(3)\n",
     "    #using metrics module for accuracy calculation\n",
     "    print(\"\\nGB accuracy score:\\n\")\n",
     "    print(metrics.accuracy_score(y_train_test, y_pred_train))"
