--- a/4.Training_model.ipynb
+++ b/4.Training_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "d75b98a5",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "ce53411e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "bd77ebbe",
    "metadata": {},
    "outputs": [],
@@ -47,16 +47,17 @@
     "    clf.fit(X_train_train, y_train_train)\n",
     "     \n",
     "    # performing predictions on the test dataset\n",
-    "    y_pred_train = clf.predict(X_train_test)\n",
+    "    y_pred_RF = clf.predict(X_train_test)\n",
     "    \n",
     "    # using metrics module for accuracy calculation\n",
     "    print(\"\\nRF accuracy score:\\n\")\n",
-    "    print(metrics.accuracy_score(y_train_test, y_pred_train))"
+    "    print(metrics.accuracy_score(y_train_test, y_pred_RF))\n",
+    "    return y_pred_RF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "927f1b0d",
    "metadata": {},
    "outputs": [],
@@ -71,16 +72,17 @@
     "    clf2.fit(X_train_train, y_train_train)\n",
     "\n",
     "    # performing predictions on the test dataset\n",
-    "    y_pred_train = clf2.predict(X_train_test)\n",
+    "    y_pred_GB = clf2.predict(X_train_test)\n",
     "    \n",
     "    #using metrics module for accuracy calculation\n",
     "    print(\"\\nGB accuracy score:\\n\")\n",
-    "    print(metrics.accuracy_score(y_train_test, y_pred_train))"
+    "    print(metrics.accuracy_score(y_train_test, y_pred_GB))\n",
+    "    return y_pred_GB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "5ebeb7c6",
    "metadata": {},
    "outputs": [],
@@ -110,7 +112,6 @@
     "        \n",
     "        xg_clf = XGBClassifier(learning_rate=learning_rate, max_depth=max_depth, scale_pos_weight=scale_pos_weight,eval_metric='mlogloss',n_jobs=-1,use_label_encoder=False)\n",
     "        xg_clf.fit(X_train_train,y_train_train)    \n",
-    "        predict = xg_clf.predict(X_train_test)\n",
     "        \n",
     "        #print(\"\\nXGBC accuracy score:\\n\")\n",
     "        preds = xg_clf.predict(X_train_test)\n",
@@ -120,15 +121,23 @@
     "        mlflow.log_param(\"max_depth\", max_depth)\n",
     "        mlflow.log_param(\"scale_pos_weight\", scale_pos_weight)\n",
     "        mlflow.log_metric(\"Accu\", acc)\n",
-    "        print(\"  Accuracy: %s\" % acc)\n",
+    "        print(\" \\nXGBOOST accuracy score:\\n %s\" % acc)\n",
     "\n",
     "        mlflow.sklearn.log_model(xg_clf, \"model\")\n",
-    "        return xg_clf"
+    "        return xg_clf, preds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9026ee26",
+   "metadata": {},
+   "source": [
+    "Prediction GB model for value 150"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "1ce0f25e",
    "metadata": {},
    "outputs": [
@@ -137,21 +146,112 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "RF accuracy score:\n",
+      "\n",
+      "0.9173535353535354\n",
+      "\n",
       "GB accuracy score:\n",
       "\n",
-      "0.9186060606060606\n"
+      "0.9185959595959596\n",
+      " \n",
+      "XGBOOST accuracy score:\n",
+      " 0.9186363636363636\n"
      ]
     }
    ],
    "source": [
-    "RF_model(X_train_train,X_train_test,y_train_train,y_train_test)\n",
-    "GB_model(X_train_train,X_train_test,y_train_train,y_train_test)\n",
-    "xg_clf = XGBC_model(X_train_train,X_train_test,y_train_train,y_train_test,0.1,35,0.1)"
+    "y_pred_RF = RF_model(X_train_train,X_train_test,y_train_train,y_train_test)\n",
+    "y_pred_GB = GB_model(X_train_train,X_train_test,y_train_train,y_train_test)\n",
+    "xg_clf, preds = XGBC_model(X_train_train,X_train_test,y_train_train,y_train_test,0.1,35,0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c145d21",
+   "metadata": {},
+   "source": [
+    "Prediction Random forest for value 95"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
+   "id": "9b130f03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_pred_RF[95])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "869a9eb2",
+   "metadata": {},
+   "source": [
+    "Prediction GB for value 0 to 150 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "f10b6788",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_pred_GB[:150])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9833fe70",
+   "metadata": {},
+   "source": [
+    "Prediction XGBOOST for value 150 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c44fb04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preds[150])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "b782b75d",
    "metadata": {},
    "outputs": [
@@ -170,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93778cfa",
+   "id": "b568b6ea",
    "metadata": {},
    "outputs": [],
    "source": []
