sphinx in progress

--- a/Project part 1.ipynb
+++ b/Project part 1.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e3aa43e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "49604d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +88,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8825b16d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +110,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e98a2ed",
    "metadata": {},
    "source": [
     "we choose the values with the most correlation, and we delete the others"
@@ -122,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8ee3badd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "26a43946",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0cbcbbf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +186,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2deddc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,21 +233,19 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7f27c43a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_explainer(model,X_train):\n",
     "    shap_values = shap.TreeExplainer(model).shap_values(X_train)\n",
+    "    shap.bar_plot(shap_values[100], feature_names = X_train.columns, max_display = len(X_train.columns))\n",
     "    shap.summary_plot(shap_values, X_train, plot_type=\"bar\")\n",
-    "    shap.summary_plot(shap_values, X_train)\n",
-    "    shap.bar_plot(shap_values[100], feature_names = X_train.columns, max_display = len(X_train.columns))"
+    "    shap.summary_plot(shap_values, X_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "21734986",
    "metadata": {
     "scrolled": false,
     "tags": []
@@ -459,7 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9022375b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -467,7 +456,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69474385",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -475,9 +463,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BCF",
+   "display_name": "yeah",
    "language": "python",
-   "name": "bcf"
+   "name": "yeah"
   },
   "language_info": {
    "codemirror_mode": {
@@ -489,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
