--- a/1.Cleaning_Dataset.ipynb
+++ b/1.Cleaning_Dataset.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ffba97b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +12,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2ca3352d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a86d04fc",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,21 +216,13 @@
     "%store df_train\n",
     "%store df_test\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ada7b837",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BCF",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "bcf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -245,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
