--- a/3.Training_model.ipynb
+++ b/3.Training_model.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d75b98a5",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ce53411e",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bd77ebbe",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "927f1b0d",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5ebeb7c6",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +124,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a680048",
    "metadata": {},
    "source": [
     "Prediction GB model for value 150"
@@ -137,8 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1ce0f25e",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +141,7 @@
       "\n",
       "RF accuracy score:\n",
       "\n",
-      "0.9174949494949495\n",
+      "0.9171212121212121\n",
       "\n",
       "GB accuracy score:\n",
       "\n",
@@ -167,7 +160,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6087b5d4",
    "metadata": {},
    "source": [
     "Prediction Random forest for value 95"
@@ -175,8 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bf3fef0b",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +184,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258d4789",
    "metadata": {},
    "source": [
     "Prediction GB for value 0 to 150 "
@@ -201,8 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "73648071",
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +214,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e34c842",
    "metadata": {},
    "source": [
     "Prediction XGBOOST for value 150 "
@@ -233,8 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "dbbc15e9",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -251,8 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b782b75d",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -270,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "BCF",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "bcf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -284,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
